Only build iOS tests for testing.

--- a/Prelude.xcodeproj/xcshareddata/xcschemes/Prelude-iOS.xcscheme
+++ b/Prelude.xcodeproj/xcshareddata/xcschemes/Prelude-iOS.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "547B48171A39A78300B60CA9"
