--- a/Prelude.xcodeproj/xcshareddata/xcschemes/Prelude-iOS.xcscheme
+++ b/Prelude.xcodeproj/xcshareddata/xcschemes/Prelude-iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "547B480D1A39A78200B60CA9"
-               BuildableName = "Prelude-iOS.framework"
+               BuildableName = "Prelude.framework"
                BlueprintName = "Prelude-iOS"
                ReferencedContainer = "container:Prelude.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "547B480D1A39A78200B60CA9"
-            BuildableName = "Prelude-iOS.framework"
+            BuildableName = "Prelude.framework"
             BlueprintName = "Prelude-iOS"
             ReferencedContainer = "container:Prelude.xcodeproj">
          </BuildableReference>
@@ -76,7 +76,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "547B480D1A39A78200B60CA9"
-            BuildableName = "Prelude-iOS.framework"
+            BuildableName = "Prelude.framework"
             BlueprintName = "Prelude-iOS"
             ReferencedContainer = "container:Prelude.xcodeproj">
          </BuildableReference>
@@ -94,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "547B480D1A39A78200B60CA9"
-            BuildableName = "Prelude-iOS.framework"
+            BuildableName = "Prelude.framework"
             BlueprintName = "Prelude-iOS"
             ReferencedContainer = "container:Prelude.xcodeproj">
          </BuildableReference>
